HTML and contrast fixes

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -194,7 +194,7 @@ nav li {
   display: block;
   margin-top: 0.3rem;
   font-weight: bold;
-  color: #0077cc;
+  color: var(--text-color);
   text-decoration: underline;
 }
 
@@ -224,7 +224,7 @@ nav li {
 .upgrade-item a {
   display: block;
   font-weight: bold;
-  color: #222;
+  color: var(--text-color);
   text-decoration: underline;
 }
 
